publish: fix: explicitly set the width of the economist logo on safari
generated from commit c4e3dacd2ce69bbe20f65556e2a7a80e7688e5f7

--- a/bundle.css
+++ b/bundle.css
@@ -1562,8 +1562,8 @@ need to have a fixed height */
 
 @media (min-width: 769px) {
 
-  .navigation__link-logo .Icon {
-    width: auto;
+  .navigation__link-logo .Icon { /* Explicitly setting the width fixes safari icon size. */
+    width: 128px;
     height: 64px;
   }
   }
